fixed padding and margins on mobile design

--- a/src/components/Projects/index.scss
+++ b/src/components/Projects/index.scss
@@ -130,6 +130,11 @@
       margin-top: 20px;
     }
 
+    .images-container {
+      margin-left: 0;
+      padding: 5px;
+    }
+
     .image-box {
       height: 200px;
       max-width: calc(50% - 10px);
